[package]
name = "ili9225"
version = "0.1.2"
authors = ["413<the413reply@gmail.com>"]
edition = "2021"
repository = "https://github.com/syx-413/ILI9225"
keywords = ["ili9225", "display", "embedded"]
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"

[dependencies.embedded-graphics-core]
version = "0.4"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]